--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: grading
 Type: Package
 Title: Grading Utilities
-Version: 0.1-1
-Date: 2014-5-26
+Version: 0.1.2
+Date: 2016-05-23
 Suggests:
     testthat,
     knitr,
@@ -14,3 +14,4 @@ Description: Utilities for grading.
 License: GPL (>=2)
 LazyLoad: yes
 LazyData: yes
+RoxygenNote: 5.0.1
