documentation improvements; explicit imports from stats and utils

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,6 @@ export(excelTime2num)
 export(factorLetters)
 export(gp2letter)
 export(letter2gp)
+importFrom(stats,uniroot)
+importFrom(utils,head)
+importFrom(utils,tail)
