add functions for dropping scores throughout a data frame and for converting raw scores to gp scores.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(excelTime2num)
 export(factorLetters)
 export(gp2letter)
 export(letter2gp)
+export(process_scores)
+export(raw2gp)
 importFrom(stats,uniroot)
 importFrom(utils,head)
 importFrom(utils,tail)
