--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,12 @@ export(gp2letter)
 export(letter2gp)
 export(process_scores)
 export(raw2gp)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
+importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,summarise)
+importFrom(stats,approxfun)
 importFrom(stats,uniroot)
 importFrom(utils,head)
 importFrom(utils,tail)
