--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,11 @@
 Package: grading
 Type: Package
 Title: Grading Utilities
-Version: 0.1.2.9001
-Date: 2017-12-05
+Version: 0.1.2.9002
+Date: 2018-12-24
+Imports:
+    dplyr,
+    tidyr
 Suggests:
     testthat,
     knitr,
